test/types/unions/union-typelessField.good
union-typelessField.chpl:2: error: currently, union fields must have a declared type
