test/types/unions/union-typelessField.chpl
union u {
  var x, y, z;
}

var myU: u;
myU.x = 42;
writeln(myU);
myU.y = "hi";

